[feat] update demo

--- a/_demos/funny/css-block.html
+++ b/_demos/funny/css-block.html
@@ -36,7 +36,7 @@ title: CSS阻塞
   <body>
     <h5>CSS 加载是否会阻塞 DOM 树解析和渲染？</h5>
     <div id="render">
-      现在在弹窗上看到这段话，说明已经完成 DOM 树解析。但页面上却没有显示这段话，说明还未完成渲染，这是因为 bootstrap.css 还在加载，阻塞了 DOM 树的渲染。
+      现在在 Console 上看到这段话，说明已经完成 DOM 树解析。但页面上却没有显示这段话，说明还未完成渲染，这是因为 bootstrap.css 还在加载，阻塞了 DOM 树的渲染。
     </div>
     <hr />
     <h5>CSS 加载是否会阻塞脚本执行？</h5>
